# pluto

./: .gitmodules  AUTHORS  Makefile.am  bootstrap.sh  configure.in  get_submodules.sh  plutune
clan-0.6.0/source/: parser.c
doc/: DOC.txt
include/pluto/: libpluto.h
orio-0.1.0/src/module/polysyn/: poly_transformator.py
sica-0.9.0/include/: amdspeccache.h  cache_math_func.h  compilerinfo.h  cpuinfo.h  hwanalysis.h  intelspeccache.h  mathhelp.h  printconvert.h  sica.h  sica_accesses.h  sica_func.h  sica_math_func.h  sica_post_transform.h  sica_retile.h  sica_tile.h  sica_tilesizes.h
sica-0.9.0/src/: amdspeccache.c  cache_math_func.c  compilerinfo.c  cpuinfo.c  hwanalysis.c  intelspeccache.c  mathhelp.c  printconvert.c  sica_accesses.c  sica_func.c  sica_math_func.c  sica_post_transform.c  sica_retile.c  sica_tile.c  sica_tilesizes.c
src/: Makefile.am  ast_transform.c  constraints.c  cuda.c  cuda.h  cuda_common.c  framework.c  gpucode.c  gpucode.h  gpuloc.c  gpuloc.h  libpluto.c  main.c  pluto.c  pluto.h  post_transform.c  program.c  program.h  schedule.c  schedule.h  test_libpluto.c
